# PassiveRadar_Kraken

./: .gitattributes  .gitignore  ATSC3_OFDM_COMPLETE.md  BLOCKS_V2_SUMMARY.md  BLOCK_B3_COMPLETE_PACKAGE.md  BLOCK_B3_COMPLETION_REPORT.md  BLOCK_B3_GRC_GUIDE.md  BLOCK_B3_INTEGRATION_COMPLETE.md  BLOCK_B3_READY_TO_USE.md  BLOCK_B3_SIGNAL_ROADMAP.md  CHANGELOG.md  CMakeLists.txt  CUDA_OPTIMIZATIONS_COMPLETE.md  DVBT_RECONSTRUCTOR_PHASE1_COMPLETE.md  Dockerfile.gpu  FunctionsIncluded.md  GRC_CONNECTION_RULES.md  GRC_YAML_Block_Definition_Practical_Spec.md  INSTALL_BLOCK_B3.md  LICENSE  MULTI_SIGNAL_B3_COMPLETE.md  PASSIVE_RADAR_SPECIFICATION.md  PHASE2_FM_IMPLEMENTATION_PLAN.md  QUICKSTART_BLOCK_B3.md  README.md  README_BLOCK_B3_UPDATES.md  SESSION_STATE.md  SIGNAL_SELECTION_GUIDE.md  build_oot.sh  calibrate_krakensdr.py  debug_eca.py  docker-compose.gpu.yml  fix_grc_layout.py  generate_grc_clean.py  install_fixed_blocks.sh  kraken_passive_radar_103_7MHz.grc  kraken_passive_radar_system.grc  kraken_passive_radar_system_connections.grc  kraken_passive_radar_template.grc  kraken_passive_radar_top_block.py  (+29 more)
docs/: BLOCKS.md  CALIBRATION.md  CONFIGURATION.md  DASHBOARDS.md  DASHBOARD_GUIDE.md  GPU_API_REFERENCE.md  GPU_DEPLOYMENT.md  GPU_PERFORMANCE.md  GPU_PROFILING.md  GPU_USER_GUIDE.md  PRODUCTION_DEPLOYMENT.md  QUICKSTART_KRAKENSDR.md  QUICKSTART_RSPDUO.md  README.md  index.html
gr-kraken_passive_radar/: CMakeLists.txt  build_and_install.sh
gr-kraken_passive_radar/grc/: CMakeLists.txt  kraken_passive_radar_aoa_estimator.block.yml  kraken_passive_radar_caf.block.yml  kraken_passive_radar_cfar_detector.block.yml  kraken_passive_radar_clutter_canceller.block.yml  kraken_passive_radar_coherence_monitor.block.yml  kraken_passive_radar_conditioning.block.yml  kraken_passive_radar_detection_cluster.block.yml  kraken_passive_radar_doppler_processing.block.yml  kraken_passive_radar_doppler_processor.block.yml  kraken_passive_radar_dvbt_reconstructor.block.yml  kraken_passive_radar_eca_b_clutter_canceller.block.yml  kraken_passive_radar_eca_canceller.block.yml  kraken_passive_radar_krakensdr_source.block.yml  kraken_passive_radar_rspduo_source.block.yml  kraken_passive_radar_rspdx_source.block.yml  kraken_passive_radar_tracker.block.yml  kraken_passive_radar_vector_zero_pad.block.yml
gr-kraken_passive_radar/include/gnuradio/kraken_passive_radar/: CMakeLists.txt  aoa_estimator.h  api.h  caf.h  cfar_detector.h  coherence_monitor.h  detection_cluster.h  doppler_processor.h  dvbt_reconstructor.h  eca_canceller.h  tracker.h
gr-kraken_passive_radar/lib/: CMakeLists.txt  aoa_estimator_impl.cc  aoa_estimator_impl.h  caf_impl.cc  caf_impl.h  cfar_detector_impl.cc  cfar_detector_impl.h  coherence_monitor_impl.cc  coherence_monitor_impl.h  detection_cluster_impl.cc  detection_cluster_impl.h  doppler_processor_impl.cc  doppler_processor_impl.h  dvbt_reconstructor_impl.cc  dvbt_reconstructor_impl.h  eca_canceller_impl.cc  eca_canceller_impl.h  radar_target_model.h  tracker_impl.cc  tracker_impl.h
gr-kraken_passive_radar/python/kraken_passive_radar/: CMakeLists.txt  __init__.py  calibration_controller.py  clutter_cancellation.py  custom_blocks.py  dashboard_sink.py  doppler_processing.py  eca_b_clutter_canceller.py  krakensdr_source.py  qa_dvbt_reconstructor.py  range_doppler_widget.py  rspduo_source.py  rspdx_source.py  vector_zero_pad.py
gr-kraken_passive_radar/python/kraken_passive_radar/bindings/: CMakeLists.txt  aoa_estimator_python.cc  caf_python.cc  cfar_detector_python.cc  coherence_monitor_python.cc  detection_cluster_python.cc  doppler_processor_python.cc  dvbt_reconstructor_python.cc  eca_canceller_python.cc  python_bindings.cc  tracker_python.cc
gr-kraken_passive_radar_v2/gr-kraken_passive_radar/: CMakeLists.txt  diagnose.sh
gr-kraken_passive_radar_v2/gr-kraken_passive_radar/grc/: kraken_passive_radar_detection_cluster.block.yml  kraken_passive_radar_doppler_processor.block.yml  kraken_passive_radar_eca_canceller.block.yml
gr-kraken_passive_radar_v2/gr-kraken_passive_radar/include/gnuradio/kraken_passive_radar/: CMakeLists.txt  coherence_monitor.h
gr-kraken_passive_radar_v2/gr-kraken_passive_radar/lib/: CMakeLists.txt  aoa_estimator_impl.cc  aoa_estimator_impl.h  cfar_detector_impl.cc  cfar_detector_impl.h  coherence_monitor_impl.cc  coherence_monitor_impl.h  doppler_processor_impl.cc  eca_canceller_impl.cc  eca_canceller_impl.h  tracker_impl.cc
gr-kraken_passive_radar_v2/gr-kraken_passive_radar/python/kraken_passive_radar/: CMakeLists.txt  __init__.py
gr-kraken_passive_radar_v2/gr-kraken_passive_radar/python/kraken_passive_radar/bindings/: CMakeLists.txt  coherence_monitor_python.cc  detection_cluster_python.cc  doppler_processor_python.cc  python_bindings.cc  tracker_python.cc
gr-kraken_passive_radar_v2/gr-kraken_passive_radar/tests/: test_algorithms_standalone.py  test_passive_radar.py
kraken_passive_radar/: __init__.py  calibration_panel.py  enhanced_remote_display.py  five_channel_dashboard.py  five_channel_demo.py  gpu_backend.py  local_processing.py  metrics_dashboard.py  multi_display_dashboard.py  radar_display.py  radar_gui.py  range_doppler_display.py  remote_display.py
repo_fixes/: CMakeLists.txt  README.md
repo_fixes/python/kraken_passive_radar/: __init__.py
src/: CMakeLists.txt  Makefile  aoa_processing.cpp  backend.cpp  caf_processing.cpp  conditioning.cpp  doppler_processing.cpp  eca_b_clutter_canceller.cpp  fftw_init.cpp  fftw_init.h  install_manifest.txt  nlms_clutter_canceller.cpp  resampler.cpp  time_alignment.cpp
src/gpu/: CMakeLists.txt  caf_gpu.cu  caf_gpu.h  cfar_gpu.cu  cfar_gpu.h  doppler_gpu.cu  doppler_gpu.h  eca_gpu.cu  eca_gpu.h  gpu_common.cu  gpu_common.h  gpu_memory.cu  gpu_memory.h  gpu_runtime.cu  gpu_runtime.h  ukf_gpu.cu  ukf_gpu.h
src/optmath/: neon_kernels.cpp  neon_kernels.hpp
tests/: check_gr_blocks.py  conftest.py  mock_gnuradio.py  offline_test_map.ppm  test_aoa_cpp.py  test_backend_cpp.py  test_caf_cpp.py  test_clutter_nlms.py  test_clutter_nlms_delayed.py  test_conditioning_cpp.py  test_doppler_cpp.py  (+9 more)
(+26 files in other folders)
